# relai-network

./: .gitignore  Cargo.toml  Containerfile  LICENSE  README.md
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/futur-assets-reg/: Cargo.toml  README.md
pallets/futur-assets-reg/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/futur-creators-reg/: Cargo.toml  README.md
pallets/futur-creators-reg/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/futur-dev-reg/: Cargo.toml  README.md
pallets/futur-dev-reg/src/: lib.rs
pallets/kumulus/: Cargo.toml  README.md
pallets/kumulus/src/: lib.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/: Cargo.toml  README.md
primitives/src/: assetsreg.rs  common.rs  creatorsreg.rs  devreg.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
