[package]
name = "relai-primitives"
version = "0.1.0"
authors = ["Relai Network <relainetwork@gmail.com>"]
edition = "2021"
description = "Primitives for Relai blockchain runtime"
homepage = "https://relai.network"
repository = "https://github.com/RELAI-Network/relai-network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate Frame Pallets
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
frame-system = { workspace = true }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-system/std"
]