[package]
name = "futur-assets-reg"
version = "0.1.0"
description = "Futur Protocol Assets Registry Pallet."
authors = ["Relai Network <relainetwork@gmail.com>"]
homepage = "https://relai.network"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/RELAI-Network/relai-network"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = {  workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true }

# Local Deps
relai-primitives = { workspace = true }

# other Deps
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
array-bytes = { workspace = true }

#[dev-dependencies]
#sp-io = { workspace = true }
#sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"relai-primitives/std",
	"sp-io/std",
	"log/std",
	"serde/std",
	"serde_json/std",
	"pallet-balances/std",
	#"array-bytes/std"
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
